--- a/Koi-Koi.vcxproj.filters
+++ b/Koi-Koi.vcxproj.filters
@@ -219,7 +219,7 @@
     <Image Include="highlight.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="blankCard.png">
+    <Image Include="backCard.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
