Project organization changes

--- a/Koi-Koi.vcxproj
+++ b/Koi-Koi.vcxproj
@@ -148,60 +148,59 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="bin\seed_log.txt" />
-    <Text Include="CardInfo.txt" />
+    <Text Include="Hanafuda Cards\CardInfo.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="backCard.png" />
-    <Image Include="g_pixel.png" />
-    <Image Include="Hanafuda Cards\img_01.png" />
-    <Image Include="Hanafuda Cards\img_02.png" />
-    <Image Include="Hanafuda Cards\img_03.png" />
-    <Image Include="Hanafuda Cards\img_04.png" />
-    <Image Include="Hanafuda Cards\img_05.png" />
-    <Image Include="Hanafuda Cards\img_06.png" />
-    <Image Include="Hanafuda Cards\img_07.png" />
-    <Image Include="Hanafuda Cards\img_08.png" />
-    <Image Include="Hanafuda Cards\img_09.png" />
-    <Image Include="Hanafuda Cards\img_10.png" />
-    <Image Include="Hanafuda Cards\img_11.png" />
-    <Image Include="Hanafuda Cards\img_12.png" />
-    <Image Include="Hanafuda Cards\img_13.png" />
-    <Image Include="Hanafuda Cards\img_14.png" />
-    <Image Include="Hanafuda Cards\img_15.png" />
-    <Image Include="Hanafuda Cards\img_16.png" />
-    <Image Include="Hanafuda Cards\img_17.png" />
-    <Image Include="Hanafuda Cards\img_18.png" />
-    <Image Include="Hanafuda Cards\img_19.png" />
-    <Image Include="Hanafuda Cards\img_20.png" />
-    <Image Include="Hanafuda Cards\img_21.png" />
-    <Image Include="Hanafuda Cards\img_22.png" />
-    <Image Include="Hanafuda Cards\img_23.png" />
-    <Image Include="Hanafuda Cards\img_24.png" />
-    <Image Include="Hanafuda Cards\img_25.png" />
-    <Image Include="Hanafuda Cards\img_26.png" />
-    <Image Include="Hanafuda Cards\img_27.png" />
-    <Image Include="Hanafuda Cards\img_28.png" />
-    <Image Include="Hanafuda Cards\img_29.png" />
-    <Image Include="Hanafuda Cards\img_30.png" />
-    <Image Include="Hanafuda Cards\img_31.png" />
-    <Image Include="Hanafuda Cards\img_32.png" />
-    <Image Include="Hanafuda Cards\img_33.png" />
-    <Image Include="Hanafuda Cards\img_34.png" />
-    <Image Include="Hanafuda Cards\img_35.png" />
-    <Image Include="Hanafuda Cards\img_36.png" />
-    <Image Include="Hanafuda Cards\img_37.png" />
-    <Image Include="Hanafuda Cards\img_38.png" />
-    <Image Include="Hanafuda Cards\img_39.png" />
-    <Image Include="Hanafuda Cards\img_40.png" />
-    <Image Include="Hanafuda Cards\img_41.png" />
-    <Image Include="Hanafuda Cards\img_42.png" />
-    <Image Include="Hanafuda Cards\img_43.png" />
-    <Image Include="Hanafuda Cards\img_44.png" />
-    <Image Include="Hanafuda Cards\img_45.png" />
-    <Image Include="Hanafuda Cards\img_46.png" />
-    <Image Include="Hanafuda Cards\img_47.png" />
-    <Image Include="Hanafuda Cards\img_48.png" />
-    <Image Include="highlight.png" />
+    <Image Include="Hanafuda Cards\backCard.png" />
+    <Image Include="Hanafuda Cards\highlight.png" />
+    <Image Include="Hanafuda Cards\M0_S0_A.png" />
+    <Image Include="Hanafuda Cards\M0_S0_B.png" />
+    <Image Include="Hanafuda Cards\M0_S2.png" />
+    <Image Include="Hanafuda Cards\crane_and_sun.png" />
+    <Image Include="Hanafuda Cards\M1_S0_A.png" />
+    <Image Include="Hanafuda Cards\M1_S0_B.png" />
+    <Image Include="Hanafuda Cards\M1_S2.png" />
+    <Image Include="Hanafuda Cards\warbling_white-eye.png" />
+    <Image Include="Hanafuda Cards\M2_S0_A.png" />
+    <Image Include="Hanafuda Cards\M2_S0_B.png" />
+    <Image Include="Hanafuda Cards\M2_S2.png" />
+    <Image Include="Hanafuda Cards\curtain.png" />
+    <Image Include="Hanafuda Cards\M3_S0_A.png" />
+    <Image Include="Hanafuda Cards\M3_S0_B.png" />
+    <Image Include="Hanafuda Cards\M3_S1.png" />
+    <Image Include="Hanafuda Cards\cuckoo.png" />
+    <Image Include="Hanafuda Cards\M4_S0_A.png" />
+    <Image Include="Hanafuda Cards\M4_S0_B.png" />
+    <Image Include="Hanafuda Cards\M4_S1.png" />
+    <Image Include="Hanafuda Cards\eight-plank_bridge.png" />
+    <Image Include="Hanafuda Cards\M5_S0_A.png" />
+    <Image Include="Hanafuda Cards\M5_S0_B.png" />
+    <Image Include="Hanafuda Cards\M5_S3.png" />
+    <Image Include="Hanafuda Cards\butterfly.png" />
+    <Image Include="Hanafuda Cards\M6_S0_A.png" />
+    <Image Include="Hanafuda Cards\M6_S0_B.png" />
+    <Image Include="Hanafuda Cards\M6_S1.png" />
+    <Image Include="Hanafuda Cards\boar.png" />
+    <Image Include="Hanafuda Cards\M7_S0_A.png" />
+    <Image Include="Hanafuda Cards\M7_S0_B.png" />
+    <Image Include="Hanafuda Cards\geese.png" />
+    <Image Include="Hanafuda Cards\full_moon.png" />
+    <Image Include="Hanafuda Cards\M8_S0_A.png" />
+    <Image Include="Hanafuda Cards\M8_S0_B.png" />
+    <Image Include="Hanafuda Cards\M8_S3.png" />
+    <Image Include="Hanafuda Cards\sake_cup.png" />
+    <Image Include="Hanafuda Cards\M9_S0_A.png" />
+    <Image Include="Hanafuda Cards\M9_S0_B.png" />
+    <Image Include="Hanafuda Cards\M9_S3.png" />
+    <Image Include="Hanafuda Cards\deer.png" />
+    <Image Include="Hanafuda Cards\lighting.png" />
+    <Image Include="Hanafuda Cards\M10_S1.png" />
+    <Image Include="Hanafuda Cards\swallow.png" />
+    <Image Include="Hanafuda Cards\ono_no_michikaze.png" />
+    <Image Include="Hanafuda Cards\M11_S0_A.png" />
+    <Image Include="Hanafuda Cards\M11_S0_B.png" />
+    <Image Include="Hanafuda Cards\M11_S0_C.png" />
+    <Image Include="Hanafuda Cards\chinese_phoenix.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
