--- a/Koi-Koi.vcxproj.filters
+++ b/Koi-Koi.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="src\Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KoiKoi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="bin\seed_log.txt">
