--- a/Koi-Koi.vcxproj.filters
+++ b/Koi-Koi.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Player.cpp">
+    <ClCompile Include="src\KoiKoi_Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,17 +56,11 @@
     <ClInclude Include="src\KoiKoi_Game_Handler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Player.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="KoiKoi.h">
+    <ClInclude Include="src\KoiKoi_Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="bin\seed_log.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
     <Text Include="Hanafuda Cards\CardInfo.txt">
       <Filter>Resource Files\Hanafuda Cards</Filter>
     </Text>
