--- a/Koi-Koi.vcxproj
+++ b/Koi-Koi.vcxproj
@@ -130,13 +130,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="KoiKoi_AI_Player.h" />
     <ClInclude Include="src\Hanafuda_Card.h" />
     <ClInclude Include="src\Hanafuda_Deck.h" />
+    <ClInclude Include="src\KoiKoi_AI_Player.h" />
     <ClInclude Include="src\KoiKoi_Display.h" />
     <ClInclude Include="src\KoiKoi_Game.h" />
     <ClInclude Include="src\KoiKoi_Game_Handler.h" />
     <ClInclude Include="src\KoiKoi_Player.h" />
+    <ClInclude Include="src\KoiKoi_Probability_Eval.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Hanafuda_Card.cpp" />
@@ -145,6 +146,7 @@
     <ClCompile Include="src\KoiKoi_Game.cpp" />
     <ClCompile Include="src\KoiKoi_Game_Handler.cpp" />
     <ClCompile Include="src\KoiKoi_Player.cpp" />
+    <ClCompile Include="src\KoiKoi_Probability_Eval.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
